LENS-1425: Update 2.7 release documentation